[gd_scene load_steps=11 format=3 uid="uid://dat20107ths0o"]

[ext_resource type="Script" uid="uid://dmq1y6pm3r00x" path="res://addons/konado/editor/view/popup/character/status_edit_window.tres.gd" id="1_t188g"]
[ext_resource type="Texture2D" uid="uid://cargjy7wp8wfn" path="res://addons/konado/runtime/template/character/kona.png" id="2_fleut"]
[ext_resource type="Script" uid="uid://b6apvrtdlihiu" path="res://addons/konado/editor/view/popup/character/portrait_picture.gd" id="3_5ujc1"]
[ext_resource type="Texture2D" uid="uid://dgyi8xxvrfl1" path="res://addons/konado/editor/assets/icon/icon_1.svg" id="4_coxhr"]
[ext_resource type="Script" uid="uid://ds5cxn6488dw1" path="res://addons/konado/editor/components/resize_component/resize_component.gd" id="5_fehp0"]
[ext_resource type="Script" uid="uid://duknahqaw4iqs" path="res://addons/konado/editor/components/resize_component/repos.gd" id="6_d4mlh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dpl7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 120
corner_radius_top_right = 120
corner_radius_bottom_right = 120
corner_radius_bottom_left = 120

[sub_resource type="ButtonGroup" id="ButtonGroup_4dpl7"]
allow_unpress = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cy6tg"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cy6tg"]
texture = ExtResource("4_coxhr")

[node name="status_preview" type="Window"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(1000, 800)
visible = false
always_on_top = true
min_size = Vector2i(800, 500)
script = ExtResource("1_t188g")

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Background"

[node name="SplitContainer" type="SplitContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Panel2/SplitContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_type_variation = &"WindowPanel"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel2/SplitContainer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="portrait_preview_bg" type="Panel" parent="Panel2/SplitContainer/Panel/AspectRatioContainer"]
unique_name_in_owner = true
clip_children = 2
clip_contents = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4dpl7")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="portrait_picture" type="TextureRect" parent="Panel2/SplitContainer/Panel/AspectRatioContainer/portrait_preview_bg"]
unique_name_in_owner = true
texture_filter = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -152.0
offset_top = 17.0
offset_right = 142.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fleut")
expand_mode = 1
stretch_mode = 5
script = ExtResource("3_5ujc1")

[node name="ColorPickerButton" type="ColorPickerButton" parent="Panel2/SplitContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_top = 176.0
offset_bottom = 203.0
grow_horizontal = 0
color = Color(0.5465902, 0.7890625, 0.78527385, 1)

[node name="BoxContainer" type="BoxContainer" parent="Panel2/SplitContainer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 214.0
offset_right = -16.0
offset_bottom = 620.0
grow_horizontal = 2
theme_override_constants/separation = 14
vertical = true
metadata/_edit_use_anchors_ = true

[node name="BoxContainer" type="BoxContainer" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2

[node name="Button5" type="OptionButton" parent="Panel2/SplitContainer/Panel/BoxContainer/BoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Button" type="Button" parent="Panel2/SplitContainer/Panel/BoxContainer/BoxContainer"]
layout_mode = 2
icon = ExtResource("4_coxhr")

[node name="Button6" type="LineEdit" parent="Panel2/SplitContainer/Panel/BoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "状态名"

[node name="Label" type="Label" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2
text = "设置立绘"

[node name="full_body" type="Button" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2
theme_type_variation = &"KSButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_4dpl7")
text = "全身"
alignment = 0

[node name="half_body" type="Button" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2
theme_type_variation = &"KSButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_4dpl7")
text = "半身"
alignment = 0

[node name="Label2" type="Label" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2
text = "设置头像"

[node name="portrait" type="Button" parent="Panel2/SplitContainer/Panel/BoxContainer"]
layout_mode = 2
theme_type_variation = &"KSButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_4dpl7")
text = "头像"
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel2/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Panel2/SplitContainer/MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="status_texture" type="TextureRect" parent="Panel2/SplitContainer/MarginContainer/AspectRatioContainer"]
unique_name_in_owner = true
texture_filter = 4
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("2_fleut")
expand_mode = 2
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="portrait_rect" type="PanelContainer" parent="Panel2/SplitContainer/MarginContainer/AspectRatioContainer/status_texture" node_paths=PackedStringArray("picture")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.40286624
anchor_top = -0.00955414
anchor_right = 0.6210191
anchor_bottom = 0.19745223
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cy6tg")
script = ExtResource("5_fehp0")
picture = NodePath("..")
metadata/_edit_use_anchors_ = true

[node name="full_body_pos" type="PanelContainer" parent="Panel2/SplitContainer/MarginContainer/AspectRatioContainer/status_texture"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4888535
anchor_top = 0.9808917
anchor_right = 0.52070063
anchor_bottom = 1.0127388
theme_override_styles/panel = SubResource("StyleBoxTexture_cy6tg")
script = ExtResource("6_d4mlh")
metadata/_edit_use_anchors_ = true

[node name="half_body_pos" type="PanelContainer" parent="Panel2/SplitContainer/MarginContainer/AspectRatioContainer/status_texture"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5366242
anchor_top = 0.45382166
anchor_right = 0.5684713
anchor_bottom = 0.48566878
theme_override_styles/panel = SubResource("StyleBoxTexture_cy6tg")
script = ExtResource("6_d4mlh")
metadata/_edit_use_anchors_ = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="color_changed" from="Panel2/SplitContainer/Panel/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="Panel2/SplitContainer/Panel/BoxContainer/full_body" to="." method="_on_full_body_toggled"]
[connection signal="toggled" from="Panel2/SplitContainer/Panel/BoxContainer/half_body" to="." method="_on_half_body_toggled"]
[connection signal="toggled" from="Panel2/SplitContainer/Panel/BoxContainer/portrait" to="." method="_on_portrait_toggled"]
[connection signal="set_portrait_rect" from="Panel2/SplitContainer/MarginContainer/AspectRatioContainer/status_texture/portrait_rect" to="." method="_on_portrait_rect_set_portrait_rect"]
